--- a/_posts/2018-05-04-알림센터-탭-열기.md
+++ b/_posts/2018-05-04-알림센터-탭-열기.md
@@ -12,21 +12,21 @@ date: "2018-05-04 21:44"
 
 기본적인 아이디어는 2015년의 [BTM 글](http://macnews.tistory.com/3058)에서 가져왔습니다. 서비스 + 키보드 단축키 조합과 Alfred 워크플로우 두 가지를 가져다가 10.12와 10.13에서 작동하도록 수정을 했습니다.
 
-## 서비스
+### 서비스
 
-1\. [이 링크를 클릭](/Resources/2018-05-04/nc.zip)해서 서비스 워크플로우를 내려받습니다.
-2\. 내려받은 서비스 워크플로우들을 `~/System/Library/Services/` 경로로 이동합니다.
-3\. 설정 > 키보드 > 단축키 > 화면 좌측 '서비스' > 일반 항목에서 show notifications 와 show today를 찾아 각각 키보드 단축키를 등록합니다.
-4\. Logitech Options Launcher를 열고 제스쳐 할당된 버튼에 Keystroke Assignment를 할당한 뒤 3\. 에서 할당한 키보드 단축키를 등록해줍니다.
+**1\.** [이 링크를 클릭](/Resources/2018-05-04/nc.zip)해서 서비스 워크플로우를 내려받습니다.  
+**2\.** 내려받은 서비스 워크플로우들을 `~/System/Library/Services/` 경로로 이동합니다.  
+**3\.** 설정 > 키보드 > 단축키 > 화면 좌측 '서비스' > 일반 항목에서 show notifications 와 show today를 찾아 각각 키보드 단축키를 등록합니다.  
+**4\.** Logitech Options Launcher를 열고 제스쳐 할당된 버튼에 Keystroke Assignment를 할당한 뒤 3\. 에서 할당한 키보드 단축키를 등록해줍니다.
 
-## Alfred 워크플로우
+### Alfred 워크플로우
 
-1\. [이 링크를 클릭](https://github.com/Canorus/-Alfred-Notification-Center/raw/master/nc.alfredworkflow)해서 Alfred 워크플로우를 내려받습니다.
-2\. 내려받은 워크플로우를 더블클릭해서 등록해줍니다.
-3\. HotKey에서 키보드 단축키를 등록합니다.
-4\. 등록한 단축키를 Logitech Options Launcher에서도 등록해줍니다.
+**1\.** [이 링크를 클릭](https://github.com/Canorus/-Alfred-Notification-Center/raw/master/nc.alfredworkflow)해서 Alfred 워크플로우를 내려받습니다.  
+**2\.** 내려받은 워크플로우를 더블클릭해서 등록해줍니다.  
+**3\.** HotKey에서 키보드 단축키를 등록합니다.  
+**4\.** 등록한 단축키를 Logitech Options Launcher에서도 등록해줍니다.
 
-## 문제 해결
+### 문제 해결
 
 - 이 솔루션은 10.12.6과 10.13.4에서 동작을 확인하였습니다.
 - 키보드 단축키에 option이 들어갈 경우 DND 모드 활성화와 중복될 가능성이 있으므로 해당 키를 제외한 단축키를 설정하는 것이 바람직합니다.
