--- a/_posts/2018-05-10-사파리-익스텐션-추출하기.md
+++ b/_posts/2018-05-10-사파리-익스텐션-추출하기.md
@@ -13,3 +13,7 @@ tags:
 ### 해결
 
 사실 별 거 없는데 `~/Library/Safari/Extensions/` 경로로 가보면 익스텐션 파일들이 `.safariextz`의 형식으로 남아있다. 그거 꺼내서 쓰면 된다.
+
+- - -
+
+- via [Apple Discussion Forum](https://discussions.apple.com/thread/3472682)
