--- a/_posts/2018-05-04-알림센터-탭-열기.md
+++ b/_posts/2018-05-04-알림센터-탭-열기.md
@@ -1,7 +1,6 @@
 ---
 layout: "post"
 title: "알림센터 탭 열기"
-menu: private
 date: "2018-05-04 21:44"
 ---
 
@@ -15,23 +14,24 @@ date: "2018-05-04 21:44"
 
 ### 서비스
 
-**1\.** [이 링크를 클릭](/Resources/2018-05-04/nc.zip)해서 서비스 워크플로우를 내려받습니다.  
-**2\.** 내려받은 서비스 워크플로우들을 `~/System/Library/Services/` 경로로 이동합니다.  
-**3\.** 설정 > 키보드 > 단축키 > 화면 좌측 '서비스' > 일반 항목에서 show notifications 와 show today를 찾아 각각 키보드 단축키를 등록합니다.  
+**이 방법은 동작하지 않을 수 있습니다.**
+
+**1\.** [이 링크를 클릭](/Resources/2018-05-04/nc.zip)해서 서비스 워크플로우를 내려받습니다.
+**2\.** 내려받은 서비스 워크플로우들을 `~/System/Library/Services/` 경로로 이동합니다.
+**3\.** 설정 > 키보드 > 단축키 > 화면 좌측 '서비스' > 일반 항목에서 show notifications 와 show today를 찾아 각각 키보드 단축키를 등록합니다.
 **4\.** Logitech Options Launcher를 열고 제스쳐 할당된 버튼에 Keystroke Assignment를 할당한 뒤 3\. 에서 할당한 키보드 단축키를 등록해줍니다.
 
 ### Alfred 워크플로우
 
-**1\.** [이 링크를 클릭](https://github.com/Canorus/-Alfred-Notification-Center/raw/master/nc.alfredworkflow)해서 Alfred 워크플로우를 내려받습니다.  
-**2\.** 내려받은 워크플로우를 더블클릭해서 등록해줍니다.  
-**3\.** HotKey에서 키보드 단축키를 등록합니다.  
+**이 방법은 Alfred 라이센스를 필요로 합니다.**
+
+**1\.** [이 링크를 클릭](https://github.com/Canorus/-Alfred-Notification-Center/raw/master/nc.alfredworkflow)해서 Alfred 워크플로우를 내려받습니다.
+**2\.** 내려받은 워크플로우를 더블클릭해서 등록해줍니다.
+**3\.** HotKey에서 키보드 단축키를 등록합니다.
 **4\.** 등록한 단축키를 Logitech Options Launcher에서도 등록해줍니다.
 
 ### 문제 해결
 
-- 이 솔루션은 10.12.6과 10.13.4에서 동작을 확인하였습니다.
 - 키보드 단축키에 option이 들어갈 경우 DND 모드 활성화와 중복될 가능성이 있으므로 해당 키를 제외한 단축키를 설정하는 것이 바람직합니다.
-- com.automator.runner.xpc와 관련한 오류는 [이 쪽](https://canor.cf/2018/05/04/com-automator-runner-xpc/)을 참조하십시오.
-- 오류가 발생하면 `/System/Library/CoreServices/Automator Runner.app`을 더블클릭하여 실행해보시는 것을 권장합니다.
-- 오류가 발생하면 `~/Library/Services/.DS_Store` 파일을 삭제해보시는 것을 권장합니다2.
-- 오류가 지속되면 재시동합니다.(제 경우는 이 단계에서 해결이 되더군요.)
+- ~~com.automator.runner.xpc와 관련한 오류는 [이 쪽](https://canor.cf/2018/05/04/com-automator-runner-xpc/)을 참조하십시오. 현재로서는 해결법을 찾지 못했습니다.~~
+- 서비스를 이용한 방법은 동작하지 않을 수 있으므로 Alfred 라이센스가 있는 경우에는 후자의 방법을 권장합니다.
