--- a/_posts/2018-06-20-Vim-검색-기초.md
+++ b/_posts/2018-06-20-Vim-검색-기초.md
@@ -36,5 +36,5 @@ nnoremap <esc> :noh<return><esc>
 - - -
 
 via
-- [Searching | Vim Tips Wiki | FANDOM powered by Wikia](http://vim.wikia.com/wiki/Searching)
+- [Searching \| Vim Tips Wiki | FANDOM powered by Wikia](http://vim.wikia.com/wiki/Searching)
 - https://stackoverflow.com/questions/657447/vim-clear-last-search-highlighting
