add tag to post

--- a/_posts/2018-01-13-맞추다와-맞히다.md
+++ b/_posts/2018-01-13-맞추다와-맞히다.md
@@ -2,8 +2,9 @@
 layout: "post"
 title: "맞추다와 맞히다"
 date: "2018-01-13 17:46"
-tags:
-  - study
+tags: 
+ - study
+ - 맞춤법
 ---
 
 항상 하는 말이지만 한국어는 정말로 어려운 언어 중 하나입니다. 어느 언어는 아니겠냐마는. 일단 맞춤법 첫번째 규정이 *소리나는대로 적되 원래 의미를 밝혀 적는다*고 되어 있지요. 뜨거운 아이스크림도 아니고.
