Edit image align

--- a/_posts/2018-07-28-iina.md
+++ b/_posts/2018-07-28-iina.md
@@ -3,7 +3,7 @@ layout: post
 title: IINA
 ---
 
-![iina](/images/2018-07-28/iina.png){:.center-image}
+![iina](/images/2018-07-28/iina.png){:.center-image}{:.small}
 
 사물의 존재 의의는 그 목적의 달성에 의해 결정됩니다. 사냥개는 사냥을 잘 해야 하고 냉장고는 음식을 잘 냉장해서 보관할 수 있어야 합니다. 그렇기 때문에 그레이 하운드는 훌륭한 사냥개 품종이고 카카오톡은 허접한 거죠.
 
