--- a/_posts/2018-07-31-alfred-환경-변수-설정하기.md
+++ b/_posts/2018-07-31-alfred-환경-변수-설정하기.md
@@ -3,7 +3,7 @@ layout: post
 title: Alfred 환경 변수 설정하기
 ---
 
-![environment variable](https://d.pr/i/cdopRI+){:.center-image}
+![environment variable](https://d.pr/i/cdopRI+){:.center-image}{:.small}
 
 수요일에 [Alfred-toot](https://github.com/Canorus/alfred-toot)이라는 스크립트를 올렸습니다. 알프레드를 통해서 마스토돈에 툿을 날릴 수 있는 워크플로우인데요. 과정 중에 인스턴스 서버와 통신해서 받아온 값을 환경 변수(Environmental Variable)에 저장하는 부분이 있어서 정리해둡니다.
 
