--- a/_posts/2018-09-27-Day-One-최근-행보에-관하여.md
+++ b/_posts/2018-09-27-Day-One-최근-행보에-관하여.md
@@ -3,6 +3,14 @@ layout: post
 title: Day One의 최근 행보에 관하여 
 ---
 
+------
+
+2018-09-30 업데이트
+
+Day One for Mac 2.9버전부터 링크가 지원되는 것을 확인했습니다. 왜 이걸 나중에서야 지원했는지는 의문이지만 한 가지 불만은 해소됐네요.
+
+------
+
 올 해 초 [다짐](https://canor.cf/2018/02/01/1월-결산/) 중에 하나가 *매일의 기록을 남겨보자* 였습니다. 그리고 그런 결심을 할 수 있게 해 준 앱이 바로 Day One 이었죠. 준수한 일기 앱이었고 돈 값하는(어쩌면 돈 값 하게 만들고자 했던) 앱이라고 생각을 합니다.
 
 그런데 요즘 그 생각이 조금씩 바뀌고 있어요.
