Publish new posts:

--- a/_posts/2018-10-10-사파리-안전하지-않은-확장-프로그램.md
+++ b/_posts/2018-10-10-사파리-안전하지-않은-확장-프로그램.md
@@ -5,6 +5,14 @@ tags:
  - troubleshooting
 ---
 
+[2018-10-18 추가]
+
+아래같은 방법으로 해도 되는데 그냥 개발자 옵션 활성화하면 아랫부분에 *서명되지 않은 확장 프로그램 허용* 옵션이 있습니다.
+
+![서명되지 않은 확장 프로그램 허용](/images/2018-10-10/enable-unsigned-extension.png){:.center-image}
+
+------
+
 Safari 12.0으로 업데이트하면서 잘 쓰던 [TabLinks](http://brettterpstra.com/projects/tablinks/)가 못 쓰게 됐습니다.
 
 ![TabLinks 설치 시 뜨는 메세지](/images/2018-10-10/safari_unsafe_plugin.png){:.center-image}
@@ -24,4 +32,5 @@ Safari 12.0으로 업데이트하면서 잘 쓰던 [TabLinks](http://brettterpst
 - - -
 
 via
+
 - [How to bypass Safari 12 ‘unsafe extension’ warning – Hacker Noon](https://hackernoon.com/how-to-bypass-safari-12-unsafe-extension-warning-c96349121e59)
