--- a/_posts/2018-11-14-커맨드라인에서-파일-제어하기.md
+++ b/_posts/2018-11-14-커맨드라인에서-파일-제어하기.md
@@ -107,7 +107,7 @@ rm 파일명.확장자
 
 디렉터리의 삭제는 `-r` 플래그를 줍니다.
 
-![디렉터리에 바로 rm하면 에러를 뱉습니다.](/image/2018-11-14/rm-r.png){:.center-image}
+![디렉터리에 바로 rm하면 에러를 뱉습니다.](/images/2018-11-14/rm-r.png){:.center-image}
 
 ***rm 명령어는 Finder의 삭제와 달리 파일을 바로 삭제하고 되돌릴 수 없기 때문에 유의해서 사용해야 합니다.*** [^1]
 
