--- a/_posts/2018-11-14-커맨드라인에서-파일-제어하기.md
+++ b/_posts/2018-11-14-커맨드라인에서-파일-제어하기.md
@@ -17,7 +17,7 @@ title: 커맨드라인에서 파일 제어하기
 
 파일 보기는 `ls` 명령어로 합니다. `list` 로 기억하시면 좋습니다.
 
-```
+```bash
 ls 디렉터리
 ```
 
@@ -26,7 +26,7 @@ ls 디렉터리
 파일의 세부 사항(최근 변경일이라든가 권한이라든가)을 보기 위해서는 `-ㅣ` 플래그를 붙여주면 됩니다.
 
 ```bash
-ls -l
+ls -l [디렉터리]
 ```
 
 - - -
@@ -35,7 +35,7 @@ ls -l
 
 파일 복사는 `cp` 명령어로 합니다. `copy` 로 기억하시면 좋습니다.
 
-```
+```bash
 cp 복사_대상 복사_목적지
 ```
 
@@ -49,7 +49,7 @@ cp 복사_대상 복사_목적지
 
 파일 이동은 `mv` 명령어로 합니다. `move` 로 기억하시면 좋습니다.
 
-```
+```bash
 mv 이동_대상 이동_목적지
 ```
 
@@ -67,7 +67,7 @@ mv 이동_대상 이동_목적지
 
 가끔 커맨드라인에서 작업하다보면 일일이 경로를 입력해서 찾아들어가기 귀찮은 경로가 있습니다. 그런 경우에는 `ln` 명령어를 사용하여 Symbolic link를 만들면 됩니다. `link` 로 기억하면 편합니다.
 
-```
+```bash
 ln -s 원본_경로 링크가_있을_경로
 ```
 
@@ -79,7 +79,7 @@ ln -s 원본_경로 링크가_있을_경로
 
 디렉터리의 생성은 `mkdir` 명령어를 사용합니다. `make directory`로 기억하면 편합니다.
 
-```
+```bash
 mkdir 디렉터리이름
 ```
 
@@ -89,7 +89,7 @@ mkdir 디렉터리이름
 
 파일의 생성은 `touch` 명령어를 사용합니다. 
 
-```
+```bash
 touch 파일명.확장자
 ```
 
@@ -101,7 +101,7 @@ touch 파일명.확장자
 
 파일의 삭제는 `rm` 명령어를 사용합니다. `remove`로 기억하면 편합니다.
 
-```
+```bash
 rm 파일명.확장자
 ```
 
@@ -119,7 +119,7 @@ rm 파일명.확장자
 
 두 개 경로의 내용물을 비교하고 싶을 수 있습니다. 최근 파일 정리하면서 가장 유용하게 써먹는 명령어 중 하나인데요. `diff` 명령어를 사용하면 됩니다. `difference` 쯤 되겠죠.
 
-```
+```bash
 diff -rq 경로1 경로2
 ```
 
@@ -131,7 +131,7 @@ diff -rq 경로1 경로2
 
 서로 다른 두 개 경로의 내용물을 비교했으면 경로에 있는 파일들을 병합하는 방법도 있겠습니다. `ditto` 명령어를 쓰면 됩니다.
 
-```
+```bash
 ditto 원본1 [원본2 … 원본n] 병합본
 ```
  여러 개 경로를 한 번에 병합할 수도 있습니다. 파일을 이동하는 것이 아니라 복사하는 것이기 때문에 병합하고 난 후에는 약간의 뒷정리가 필요할 수 있습니다.
@@ -147,7 +147,7 @@ ditto 원본1 [원본2 … 원본n] 병합본
 
 예를 들어서 확장자가 있는 모든 파일을 files 디렉터리에 몰아넣으려고 한다면
 
-```
+```bash
 mv *.* files/
 ```
 
@@ -155,7 +155,7 @@ mv *.* files/
 
 macOS의 경우 동일한 이름의 파일이 있다면 뒤에 1, 2, 3을 붙이는 식으로 파일을 추가하게 되는데 이런 중복파일은
 
-```
+```bash
 rm * 1.*
 ```
 
