Publish new post and edit old post

--- a/_posts/2018-12-17-Anne-pro-2-간단소감.md
+++ b/_posts/2018-12-17-Anne-pro-2-간단소감.md
@@ -5,9 +5,17 @@ title: Anne Pro 2 간단소감
 
 ![Anne Pro 2. 바로 위에는 그 전에 쓰던 Matias Laptop Pro가 살짝 보입니다.](https://d.pr/i/dqyQnB+)
 
+\[2018-12-18 추가\]
+
+USB-C 단자를 쓰는 건 장점입니다. 어두운 곳에서도 케이블을 꽂는데 뒤집을 필요가 없어서 좋아요. 하지만 C타입이라고 해서 충전 속도가 그리 빠르다거나 한 것 같지는 않은데 뭐 어차피 꽂아놓고 쓸 거니 패스.
+
+배터리 잔량을 확인하는 버튼을 누르면 상단 숫자 열에 1부터 0까지 초록-빨강으로 표시되어서 배터리가 얼마나 남았는지 볼 수 있습니다. 그런데 한 두세 시간 정도 빡세게 쓰니까 한 칸이 닳더라구요. 전체 사용 시간이 2~30 시간 정도 된다는 건데, 생각만큼 긴 것 같지는 않습니다. 물론 이것도 꽂아놓고 블투로 연결해서 쓸 거니 패스.
+
+------
+
 금요일에 배송이 되었던 Anne Pro 2를 들고 왔습니다. 근무지로 배송을 시켰는데 하필 연가 쓴 날 도착하다니.
 
-하루 써보고 완전한 평가를 하기는 힘들지만 대략적인 첫인상이라고 적어보려고 합니다. 안 그러면 아예 블로그에 기록이 안 남을 것 같아서요.
+하루 써보고 완전한 평가를 하기는 힘들지만 대략적인 첫인상이라도 적어보려고 합니다. 안 그러면 아예 블로그에 기록이 안 남을 것 같아서요.
 
 일단 상당히 특이한 레이아웃입니다. 텐키리스 중에서도 60% 레이아웃이죠. 사실 지금 근무지에서 쓰고 있는 Plum75도 60% 레이아웃이지만(상단 F1 키열을 제외하면) 이건 하우징도 확 줄인 터라 더 작은 느낌입니다.
 
