--- a/_posts/2019-02-01-2019_01_30_구매후기.md
+++ b/_posts/2019-02-01-2019_01_30_구매후기.md
@@ -19,7 +19,7 @@ tags:
 
 ### 가열식가습기
 
-![쿠파에서 주문한 소형 가열식 가습기](/iamges/2019-02-01/humidifier.jpg)
+![쿠팡에서 주문한 소형 가열식 가습기](/images/2019-02-01/humidifier.jpg){:.center-image}
 
 이거는 제가 쓸 건 아니고 모친 테스트 용으로 산 물건인데 소형 가열식 가습기입니다. 생각보다 플라스틱 냄새가 짙게 나는데 하룻밤 정도 켜놓으니까 거의 날아갔네요. 다만 가습 능력이 그리 출중하지는 않습니다. 그냥 De'erma 대용량 가습기 사세요.
 
