--- a/_posts/2019-02-01-test.md
+++ b/_posts/2019-02-01-test.md
@@ -8,4 +8,12 @@ permalink: /image_test
 ![test](/images/2019-02-01/center.png){:.center-image}
 *caption test*
 
+<figure>
+![](/images/2019-02-01/center.png){:.center-image}
+<figcaption>figcaption here</figcaption>
+</figure>
+
+<p class="via">
+via class is tested here
+</p>
 body comes here
