--- a/_posts/2019-02-01-test.md
+++ b/_posts/2019-02-01-test.md
@@ -9,7 +9,7 @@ permalink: /image_test
 *caption test*
 
 <figure>
-![](/images/2019-02-01/center.png){:.center-image}
+<img src="{{site.url}}/images/2019-02-01/center.png" class="center-image"/>
 <figcaption>figcaption here</figcaption>
 </figure>
 
