--- a/_posts/2019-02-01-test.md
+++ b/_posts/2019-02-01-test.md
@@ -5,7 +5,7 @@ menu: private
 permalink: /image_test
 ---
 
-![test](/images/2019-02-01/center.png){:.center-image}
+![test](/images/2019-02-01/center.png){:.center-image .small}
 *caption test*
 
 <figure>
