--- a/_posts/2019-02-01-test.md
+++ b/_posts/2019-02-01-test.md
@@ -16,4 +16,8 @@ permalink: /image_test
 <p class="via">
 via class is tested here
 </p>
+
+> how to add via class to blockquote
+> <p class="via">via via class</p>
+
 body comes here
