Update test and style

--- a/_posts/2019-02-01-test.md
+++ b/_posts/2019-02-01-test.md
@@ -6,7 +6,7 @@ permalink: /image_test
 ---
 
 ![test](/images/2019-02-01/center.png){:.center-image .small}
-*caption test*
+<p class="caption">p caption test</p>
 
 <figure>
 <img src="{{site.url}}/images/2019-02-01/center.png" class="center-image"/>
