--- a/_posts/2020-08-05-find를-이용해서-검색하기.md
+++ b/_posts/2020-08-05-find를-이용해서-검색하기.md
@@ -60,6 +60,8 @@ find . -type f -size +3G -exec ls -l {} +
 
 파일이 아니라 폴더를 검색할 때에는 `-type f` 대신에 `-type d`[^1] 를 사용하면 된다.
 
+[^1]: file의 f, directory의 d 로 기억하면 편하다. 
+
 *현재 경로* 에서 *3GB 이상* 크기의 Netflix 폴더명을 검색
 
 ```
